Add Pete as a maintainer

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,6 +47,7 @@ about:
 
 extra:
   recipe-maintainers:
-    - mrakitin
-    - kbeeperez
     - conda-forge/event-model
+    - kbeeperez
+    - mrakitin
+    - prjemian
