--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,12 +38,12 @@ test:
     - punx --help
 
 about:
-  home: http://punx.readthedocs.io
+  home: https://prjemian.github.io/punx/
   license: CC-BY-4.0
   license_file: punx/LICENSE.txt
   summary: Python Utilities for NeXus
   dev_url: https://github.com/prjemian/punx
-  doc_url: http://punx.readthedocs.io
+  doc_url: https://prjemian.github.io/punx/
 
 extra:
   recipe-maintainers:
