--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "punx" %}
-{% set version = "0.3.0" %}
-{% set sha256 = "b742472336393dcc40c04fa4275608accd0376458052a7d562f21ef17c0e5d3c" %}
+{% set version = "0.3.2" %}
+{% set sha256 = "5f9ca85ff47014dcea9626b757872f22f04cbeef6b97b3d4d3ddcd9d438463f5" %}
 
 package:
   name: {{ name|lower }}
@@ -19,16 +19,20 @@ build:
 
 requirements:
   host:
-    - python >=3.7
     - pip
+    - python >=3.8
+    - setuptools-scm
   run:
-    - python >=3.7
-    - h5py
+    - h5py >=3
+    - hdf5plugin
     - lxml
     - numpy
-    - pyqt >=5
-    - pyresttable
+    - python >=3.8
+    - pip
+    - pyqt =5
+    - pyRestTable
     - requests
+    - sip
 
 test:
   imports:
