--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "punx" %}
-{% set version = "0.3.4rc2" %}
-{% set sha256 = "62c9745cc6c262fdf7ef863ae9086b930b9c4570161455c0d3ff0c2aa50f0598" %}
+{% set version = "0.3.4" %}
+{% set sha256 = "0eda9911cee3b89628dc9a68985c9bdc9c9a2b6d8d50213e08ebf212c0af3c03" %}
 
 package:
   name: {{ name|lower }}
