--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,10 +15,10 @@ build:
     - punx=punx.main:main
   # per https://github.com/pypa/setuptools_scm/issues/357#issuecomment-846476165
   # SETUPTOOLS_SCM_PRETEND_VERSION="$(python3 setup.py --version)" pip install .
-  script: SETUPTOOLS_SCM_DEBUG=1 SETUPTOOLS_SCM_PRETEND_VERSION="$(python3 setup.py --version)" {{ PYTHON }} -m pip install . -vv
+  # script: SETUPTOOLS_SCM_DEBUG=1 SETUPTOOLS_SCM_PRETEND_VERSION="$(python3 setup.py --version)" {{ PYTHON }} -m pip install . -vv
   # skip: true  # [py<38 and py>310]
   noarch: python
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: SETUPTOOLS_SCM_DEBUG=1 SETUPTOOLS_SCM_PRETEND_VERSION="$(python3 setup.py --version)" {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
   host:
